tests/sources/invalid/generics/generic_function_inference_errors.fire
// Generic function type-argument inference failures: a type parameter that
// doesn't appear in any parameter position can't be inferred from the call
// site, and a constraint violation once a type is otherwise inferred.
fn make<T>() -> T {
    x: int32 = 5;
    return x;
}

constraint Numeric = int32 | float32;

fn addNumeric<T: Numeric>(a: T, b: T) -> T {
    return a + b;
}

fn cannotInfer() -> int32 {
    y: int32 = make();  //~ ERROR FS-SEM-0010 @16
//~^ ERROR FS-SEM-0002 @5
    return y;
}

fn main() -> int32 {
    x: bool = addNumeric(true, true);  //~ ERROR FS-SEM-0010 @15
    return 0;
}
